[package]
name = "ed25519xp"
version = "0.1.0"
edition = "2018"

[lib]
name = "ed25519xp"
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = { version = "1.0.0-pre.3", features = ["nightly"] }
blake2 = "0.8"
bip39 = "0.6.0-beta.1"
wasm-bindgen = "^0.2.58"
js-sys = "^0.3.35"
# The `web-sys` crate allows you to interact with the various browser APIs, like the DOM.
web-sys = { version = "^0.3.22", features = ["console"]}
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.14.0", default-features = false }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]